--- a/argocd/apps/resume/secrets/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/secrets/resume-secrets.enc.yaml
@@ -4,17 +4,17 @@ metadata:
     name: resume-secrets
 type: Opaque
 stringData:
-    DB_PASSWORD: ENC[AES256_GCM,data:rMKu0n2I8Sw=,iv:fljwEtzRZ2RiLbtLroLgAlwv+tIPavOCksOmRy7jEZs=,tag:2uSO027ZiYZw4+GJCI24+A==,type:str]
-    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:m/awEBM=,iv:/2UFhTIIKSY4jASI/3A/EObniNSePOrhAbm/n0lyRj4=,tag:ORq57nDuVeaUEqXNU+a54w==,type:str]
-    TOKEN: ENC[AES256_GCM,data:WYfe5gvwRgMNOvry,iv:PImDMBAJd9Lggl5hekd8UUYg2v+dnI2gwU4hgI1zpsQ=,tag:ra335QyN755tYwlQlgBrjw==,type:str]
-    CHROME_TOKEN: ENC[AES256_GCM,data:SpNwkGFpjDSu12KQ,iv:/tIzNT6sRL/erkOYN+BBCy2tEgVMYr6d2Y6y8hTAqTU=,tag:r94kyTkjv0tDXp7DDu7sIA==,type:str]
+    DB_PASSWORD: ENC[AES256_GCM,data:dgwAv+YZbq2gLo2JVfIutsR6G20agQ6In9Bkg8DolBOg5dPO6LCkivf/RGmF5qphz5/RV1Zdw3VsXfzz1RbYAw==,iv:uAqhA/7L3cpDwEzM3/4xdjjXgVmIB3xafCNZiKXK1co=,tag:1rLJS4ugEMZu26BJ1A/zjg==,type:str]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:EP75TAog0p+d25B22oAG4Pjpao12nKLQfNk8ecb+tdcIiKflJVFI5KtFGr6YsKzh/IA0VVBG4AIAtP6/tfTEsA==,iv:NRnVViEIZDmtG/XDnKxuDyM7c/UcRvTYG3Pb0A/HMsM=,tag:P4U09IUjItI0sfxVUGqO6Q==,type:str]
+    TOKEN: ENC[AES256_GCM,data:GL3AndZIyXPEUgap3J1waxmj8/osxwO3tWj80icp7EE1lgUujqd3SLcj0DBkkJuetLsUivX0NsdxxC9PXuv6JQ==,iv:lj8hjQUyxSVWPteGlWQQHOpGfikD/G8/a49bkfVdFaI=,tag:2sQ+Pa4ug9uoCTlUYITVqA==,type:str]
+    CHROME_TOKEN: ENC[AES256_GCM,data:jXgKfpIuLD7iXLiggGrcd+NKSf0KzxyDDc+JJcgau1japxHT4KYqAj9Id748haAwI6GmlVWxq8CBxKoOeiFkkQ==,iv:8e9YlpnkwiC/tJM6YXUzwn76hNrzopZfBnEQWtkn3TY=,tag:fGw0RQKJmsw4CMQ/XN6jiQ==,type:str]
     PUBLIC_URL: ENC[AES256_GCM,data:S11iy2a2/jLHFyXB4RusrEu4FrFXGVo4+HxVkg==,iv:CFEGEIPw/0uvdod5l3gNz2/p0Sk+mbHhIDafZjwgnc0=,tag:DsXsH4JXN6YPttY1HAGrjA==,type:str]
     STORAGE_URL: ENC[AES256_GCM,data:mHF3Ptf4pXLIyIYD/RRTZQB+bbutygxO1Y9lB3HBxHzLB/UiFw==,iv:SntPfbEIoCSf9PdxvquYIFmdholVOYVYV2ZVZtx7MLM=,tag:7MTzTmAq4ovgb81n2+QJUQ==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:lJpAyIt19kQ94+Rl73vGBUQtz/KzXSkB/ckxDp4MLxjzYsImrKl2oztbZQsLe4b/53hn8Xc=,iv:4F58x/xRtRfWEB3sU8uuCNVGgVxIDX68GbOwv0QE+zE=,tag:Kyu2JgeMTZpQa94g+txeRQ==,type:str]
-    ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:AubItAQVIP17YJzIG/Bfhnynkg==,iv:5GucKD792sskBkpBhyiiFP1/YvT2eYHTHAH+h7ozKVE=,tag:f7HTgHqm+RZg30fqI34miQ==,type:str]
-    REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:6+aVAB6U+ST0yQzRV697wlxnL9c=,iv:+Ml7F32jgfqnzRpuyn7g5kAaZhARLuoGQYeaq8p7HLM=,tag:1SATGjWjmVKe+LdLG4lAoA==,type:str]
-    STORAGE_ACCESS_KEY: ENC[AES256_GCM,data:vziAe68zq7vSsg==,iv:BixmvWuDGkbrbqYII5I0y+kFYHqI/ZfGXz9K8qZWIzU=,tag:nFA7U0gv8zOWtoy/g6NUSg==,type:str]
-    STORAGE_SECRET_KEY: ENC[AES256_GCM,data:97J3XdcKiH4k5w==,iv:qWkm/yqa1TZ73viVQtSTEru2xy8/hbueVAo0G9KWrUE=,tag:fcwEc6lk1aPg8OjLCkl97A==,type:str]
+    ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:S0fRpdyH6KEK5G3Echgm1zqsIfT/Yun9mAhTsUJhvHVAOdV+6PtKogwzvsDZs9j40Kwr70MPL9tnIzDkz/3Ilw==,iv:7VqUhM7eyUijoHRnfMoihKkRf1/5btFmZxdXgho2ZHw=,tag:xbkzjbBunkL8lrCNXYKL1Q==,type:str]
+    REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:2La2OXfa5vO8OQqySTomRPju+LDANICA0vwLeSvo6k9dzmQUrnpmaOW7Igoyg1fJbDmNSeAv7Q/4/w7jlbJkGg==,iv:tjqMVZtTE06NDlgeULDdW4WAheueaSKmecwiqGqrnQQ=,tag:S25PoKfitVdSzvc3l5Tg4g==,type:str]
+    STORAGE_ACCESS_KEY: ENC[AES256_GCM,data:xdoEmJ22Fz4SUKOLHb7yuDB/gyP0rPkscMYdXGjgktqt4ZeKfQDjkHFXeFjjZde3qv2tnf2kIGN3EpErPqb+Lg==,iv:6q8ugGCeiXhhYyiJn1EHd4K0Ia1ZDhn3kAuKBcEQdw0=,tag:9zP/BaPU5TlFvXyODA9bqw==,type:str]
+    STORAGE_SECRET_KEY: ENC[AES256_GCM,data:HzczgkXI8Z6aA7pe4+pcFm0QUUhRqPfOacNJN8Sy6UxlKwjJHkelk3ylHFo5+WFVnUH3ZVGMlnRiAy0iPnAOpw==,iv:6BLD78D2QLCDA/aCjkfw4vaBOoEZNTxnq6AZVweU/wc=,tag:RJ5iM1CvFBiuzAFwMU0CWg==,type:str]
     REDIS_URL: ENC[AES256_GCM,data:51/hWBs84IYbMULXM+GLjYAJ,iv:rGCFqYOXmTWJ+AfLeFmbqauqXXzm+7YB4V6KtmAypho=,tag:86bDW2T1F2DcYxUOQvWVRw==,type:str]
 sops:
     kms: []
@@ -31,8 +31,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T17:32:38Z"
-    mac: ENC[AES256_GCM,data:ytSy/gnOvqIv0FDEpDaoGkmHo9wz7t0I+JO5cpBsEcWjiKV1Q3xtE2i5lJ4i4cKjzPZz1qdlQW4obwxJ+4I44zxV7Ax+wPYpd4UdLC/S7TVGMRPgyo2CyJUX0M3BhO6hAY7gZDXws5yx5wzcI/Oj3SWyl8toR/0qHg/HB/7eEqw=,iv:DlwiE9JhCIcYBztGDBoU2Ycomq4aDCq39vPlyUoqFAY=,tag:dzEsuO8wFuc2Smsvmu1Hpw==,type:str]
+    lastmodified: "2025-01-28T18:00:32Z"
+    mac: ENC[AES256_GCM,data:MD6ENpqgWGYbvrwkzd52KU5PVdequBZpM1iJ9UVDPIB7bJbjnPZUxD70SjgkVbPERHEv8TRq63zN10ZS82G/fmy4fffaizX7aVoXuIsm+NyKdeTUEUxMclmUPAXq7vWLYatBy85Vq7x3TP+hUr+Cxic2DfThHcs2z5g7SkgqEZY=,iv:Uq/x2bpE7O3LANSo+MYs5NwGwtGpxaHHYIvuWswmXEA=,tag:VtZU4xWA7R1yMmHi5Rd3Mg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
