--- a/argocd/apps/resume/app.yaml
+++ b/argocd/apps/resume/app.yaml
@@ -18,4 +18,4 @@ spec:
   source:
     repoURL: https://github.com/myanello/homelab.git
     targetRevision: HEAD
-    path: argocd/apps/resume/*/*
+    path: argocd/apps/resume/**
