--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -67,7 +67,7 @@ spec:
     spec:
       containers:
         - image: docker.io/redis:6.2-alpine:latest
-          imagePullPolicy: always
+          imagePullPolicy: Always
           name: redis
           ports:
             - containerPort: 6379
@@ -110,7 +110,7 @@ spec:
                   name: resume-secrets
                   key: DB_PASSWORD
           image: postgres:15-alpine:latest
-          imagePullPolicy: always
+          imagePullPolicy: Always
           livenessProbe:
             exec:
               command:
@@ -167,7 +167,7 @@ spec:
     spec:
       containers:
         - image: ghcr.io/browserless/chromium:latest
-          imagePullPolicy: always
+          imagePullPolicy: Always
           name: chrome
           env:
             - name: TIMEOUT
@@ -201,7 +201,7 @@ spec:
     spec:
       containers:
         - image: amruthpillai/reactive-resume:latest
-          imagePullPolicy: always
+          imagePullPolicy: Always
           name: resume
           ports:
             - containerPort: 3000
