--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -66,8 +66,8 @@ spec:
         app: redis
     spec:
       containers:
-        - image: docker.io/redis:6.2-alpine:latest
-          imagePullPolicy: Always
+        - image: docker.io/redis:6.2-alpine
+          imagePullPolicy: IfNotPresent
           name: redis
           ports:
             - containerPort: 6379
@@ -110,7 +110,7 @@ spec:
                   name: resume-secrets
                   key: DB_PASSWORD
           image: postgres:15-alpine
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           livenessProbe:
             exec:
               command:
