--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   DB_HOSTNAME: postgres
   DB_DATABASE_NAME: postgres
-  DB_USERNAME: marcus
+  DB_USERNAME: postgres
   REDIS_HOSTNAME: "redis"
   REDIS_PORT: "6379"
 ---
@@ -31,7 +31,7 @@ spec:
       containers:
         - env:
             - name: MINIO_ROOT_USER
-              value: admin
+              value: minioadmin
           envFrom:
             - secretRef:
                 name: resume-secrets
