--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -4,17 +4,23 @@ metadata:
     name: resume-secrets
 type: Opaque
 stringData:
-    DB_PASSWORD: ENC[AES256_GCM,data:dgwAv+YZbq2gLo2JVfIutsR6G20agQ6In9Bkg8DolBOg5dPO6LCkivf/RGmF5qphz5/RV1Zdw3VsXfzz1RbYAw==,iv:uAqhA/7L3cpDwEzM3/4xdjjXgVmIB3xafCNZiKXK1co=,tag:1rLJS4ugEMZu26BJ1A/zjg==,type:str]
-    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:EP75TAog0p+d25B22oAG4Pjpao12nKLQfNk8ecb+tdcIiKflJVFI5KtFGr6YsKzh/IA0VVBG4AIAtP6/tfTEsA==,iv:NRnVViEIZDmtG/XDnKxuDyM7c/UcRvTYG3Pb0A/HMsM=,tag:P4U09IUjItI0sfxVUGqO6Q==,type:str]
+    #ENC[AES256_GCM,data:NLtwDuN2f1gKPhMVK7Y+YBwlMgdzE99PlJOaI9xZVFosYaNirAr9ceNtDsYuaKlWYgsvcc4xMM7CS6wc0LqrxQ==,iv:nOkOTwcOuGxOJRmoDcUrtB1clpcwhF6L0qotCG6t3cI=,tag:QpAxq+hchID5p/PUV7aLkQ==,type:comment]
+    DB_PASSWORD: ENC[AES256_GCM,data:Ng4ch3oY9Ng=,iv:nhNpN1rQiVGtsX3q4wce3+EdQGEm3CSHJiNOt6Csgtw=,tag:ChWbbFSwy69DB2urbjZIYA==,type:str]
+    #ENC[AES256_GCM,data:eSUaMTN1ITMmmCVf19sZCxjgyHHWB6RD4Ltwn+z83Z1frNtOCCm4UXN0gkjYW/P94EMWQeT+9Vp1ac8CrxljiA==,iv:S1v0D3PSv4kGzrzlbQO2LAt8qVGJMQu9P5AO5gBHFjM=,tag:CPete9RQJgElxCNlOqvhpg==,type:comment]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:fsoAThraUi1IgQ==,iv:a3q6Et5ewCKl4ix3pdYznAKcNLaw+KFAHMFY2+RGHCo=,tag:vtLOJRWjkhzPNUrLQyW8qQ==,type:str]
     TOKEN: ENC[AES256_GCM,data:GL3AndZIyXPEUgap3J1waxmj8/osxwO3tWj80icp7EE1lgUujqd3SLcj0DBkkJuetLsUivX0NsdxxC9PXuv6JQ==,iv:lj8hjQUyxSVWPteGlWQQHOpGfikD/G8/a49bkfVdFaI=,tag:2sQ+Pa4ug9uoCTlUYITVqA==,type:str]
     CHROME_TOKEN: ENC[AES256_GCM,data:jXgKfpIuLD7iXLiggGrcd+NKSf0KzxyDDc+JJcgau1japxHT4KYqAj9Id748haAwI6GmlVWxq8CBxKoOeiFkkQ==,iv:8e9YlpnkwiC/tJM6YXUzwn76hNrzopZfBnEQWtkn3TY=,tag:fGw0RQKJmsw4CMQ/XN6jiQ==,type:str]
     PUBLIC_URL: ENC[AES256_GCM,data:S11iy2a2/jLHFyXB4RusrEu4FrFXGVo4+HxVkg==,iv:CFEGEIPw/0uvdod5l3gNz2/p0Sk+mbHhIDafZjwgnc0=,tag:DsXsH4JXN6YPttY1HAGrjA==,type:str]
     STORAGE_URL: ENC[AES256_GCM,data:mHF3Ptf4pXLIyIYD/RRTZQB+bbutygxO1Y9lB3HBxHzLB/UiFw==,iv:SntPfbEIoCSf9PdxvquYIFmdholVOYVYV2ZVZtx7MLM=,tag:7MTzTmAq4ovgb81n2+QJUQ==,type:str]
-    DATABASE_URL: ENC[AES256_GCM,data:MnTtDKGYddzm+fmQta5LLzGz1wWV6EMaiVrM4T5oK4Y2XhKZ5mpfysPyCkS/tvJPYZz13j/TF7mHQCU=,iv:syWJ17XSFPsfxUuhniq/kM8G9xKy6Qy6YPGSH3iQrzA=,tag:R/z6RVswjMARJ0He+BOyYA==,type:str]
-    ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:S0fRpdyH6KEK5G3Echgm1zqsIfT/Yun9mAhTsUJhvHVAOdV+6PtKogwzvsDZs9j40Kwr70MPL9tnIzDkz/3Ilw==,iv:7VqUhM7eyUijoHRnfMoihKkRf1/5btFmZxdXgho2ZHw=,tag:xbkzjbBunkL8lrCNXYKL1Q==,type:str]
-    REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:2La2OXfa5vO8OQqySTomRPju+LDANICA0vwLeSvo6k9dzmQUrnpmaOW7Igoyg1fJbDmNSeAv7Q/4/w7jlbJkGg==,iv:tjqMVZtTE06NDlgeULDdW4WAheueaSKmecwiqGqrnQQ=,tag:S25PoKfitVdSzvc3l5Tg4g==,type:str]
-    STORAGE_ACCESS_KEY: ENC[AES256_GCM,data:xdoEmJ22Fz4SUKOLHb7yuDB/gyP0rPkscMYdXGjgktqt4ZeKfQDjkHFXeFjjZde3qv2tnf2kIGN3EpErPqb+Lg==,iv:6q8ugGCeiXhhYyiJn1EHd4K0Ia1ZDhn3kAuKBcEQdw0=,tag:9zP/BaPU5TlFvXyODA9bqw==,type:str]
-    STORAGE_SECRET_KEY: ENC[AES256_GCM,data:HzczgkXI8Z6aA7pe4+pcFm0QUUhRqPfOacNJN8Sy6UxlKwjJHkelk3ylHFo5+WFVnUH3ZVGMlnRiAy0iPnAOpw==,iv:6BLD78D2QLCDA/aCjkfw4vaBOoEZNTxnq6AZVweU/wc=,tag:RJ5iM1CvFBiuzAFwMU0CWg==,type:str]
+    DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
+    #ENC[AES256_GCM,data:jPwLluTgGc352OmWzo15VrJ9AThNEa+MbQ9X+ktYrBY35rf6mxVVg0UCg29NBenwmKwquL89t+RZpoE6elxVPw==,iv:2LlR4M97N9vLLJaNexvMPuHx9p8zb65AoJeL1OnEFF4=,tag:0ICj3V+Tu5U68276tZgtiw==,type:comment]
+    ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
+    #ENC[AES256_GCM,data:KAh0vigUa1+7rcHJSwflqX4Wl/Ff39E5XoTZjgw/J/V+bYQ6PU+/o/L/nzp4AeTMEvw1ebMI6zsKfsDYSs8ujg==,iv:4OnYPWnVZmuj7FbXv7+5ZQcyD5WrANOaCX2IrxMirV0=,tag:Zq4yl/06xRz2+eSHwalk7g==,type:comment]
+    REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
+    #ENC[AES256_GCM,data:jP+dHpBtiixL5XJBiuKW9Z92VTSYUvH1vg2fzckBvrEYRG0astBVp2gWgqf5LF/MhC7cXtxrVVmtwuR/R8mt0g==,iv:o1YCwujRbawc8eCZson5c5u3cz42HL8xVz3T8iBkcv0=,tag:/P7A1XTi5RCU16EqJmDgHg==,type:comment]
+    STORAGE_ACCESS_KEY: ENC[AES256_GCM,data:PJ9gro+UX0O5Dw==,iv:Vgjizp5bWtn8NwpixceJA6qKHbcTPGX6/rtEr2lCQfw=,tag:LMcAJXkAkg5GIoI7jjAdaQ==,type:str]
+    #ENC[AES256_GCM,data:5xy+TLQAush9U3Srb91U7DNCgf26UQiivbZqrjZJ7daIQyC1RpPNVPKbfhdPGhNCayx09O8UQVy4Ts4f+WoJ5g==,iv:PUe3iYAlVxUFrWYJ5Qi92aoxevBzefAD6oa7/57GEJY=,tag:QcdM5PJwHM8XlxFl/DjpVg==,type:comment]
+    STORAGE_SECRET_KEY: ENC[AES256_GCM,data:xSXbIpp763Q8nw==,iv:Smqq+ABrUqzr84s+IE7nihOk1BDLrgqXYF/ZyX6/dK0=,tag:G0rTjkERtVuUp82OWM+e0A==,type:str]
     REDIS_URL: ENC[AES256_GCM,data:51/hWBs84IYbMULXM+GLjYAJ,iv:rGCFqYOXmTWJ+AfLeFmbqauqXXzm+7YB4V6KtmAypho=,tag:86bDW2T1F2DcYxUOQvWVRw==,type:str]
 sops:
     kms: []
@@ -31,8 +37,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T18:14:03Z"
-    mac: ENC[AES256_GCM,data:n1ZPd7vbjeh90xYp830hA7duw4aWqeVqAf7gvQixLq6HDfGcM0g8r/HrhKcFMKTemJQQq/v0yw4bE/8S7bomjI0PFWChKQEyS2pgovl8QLx2KkcLTOn8I3PEjBEeVyEQL42UT3hhS8JPczeCTVsYIEmnjtz+OWr7XFuOKQze33E=,iv:yijKo63NFJPXWt4QR6XZapPPEohJxkyyHO8djM1bRS8=,tag:nIS1uGfgcKNxOgNDhiZ9iQ==,type:str]
+    lastmodified: "2025-01-28T18:30:54Z"
+    mac: ENC[AES256_GCM,data:QyEJAzsH8YF0/unPS7LKK7P679RwajcLgmjzbNAKsLO6msLxCFwEtTMOosOQb5O0tzdrcNGvkemVhIrSLQ8edrG7En8zh1UizVx6+NGMpzXrXk65k2TyK19MDJsELT5WtODk9iedf1UG1qIWpiZxWw+z7gncHXb4dqfZzuB396Y=,iv:QaxxgIq8ODwVvRhluVWvoG89kbI/9NdKknfZgEWOraA=,tag:5bzDmud68AX68QNWUI5RzQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
