--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -8,8 +8,10 @@ stringData:
     DB_PASSWORD: ENC[AES256_GCM,data:Ng4ch3oY9Ng=,iv:nhNpN1rQiVGtsX3q4wce3+EdQGEm3CSHJiNOt6Csgtw=,tag:ChWbbFSwy69DB2urbjZIYA==,type:str]
     #ENC[AES256_GCM,data:eSUaMTN1ITMmmCVf19sZCxjgyHHWB6RD4Ltwn+z83Z1frNtOCCm4UXN0gkjYW/P94EMWQeT+9Vp1ac8CrxljiA==,iv:S1v0D3PSv4kGzrzlbQO2LAt8qVGJMQu9P5AO5gBHFjM=,tag:CPete9RQJgElxCNlOqvhpg==,type:comment]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:fsoAThraUi1IgQ==,iv:a3q6Et5ewCKl4ix3pdYznAKcNLaw+KFAHMFY2+RGHCo=,tag:vtLOJRWjkhzPNUrLQyW8qQ==,type:str]
-    TOKEN: ENC[AES256_GCM,data:GL3AndZIyXPEUgap3J1waxmj8/osxwO3tWj80icp7EE1lgUujqd3SLcj0DBkkJuetLsUivX0NsdxxC9PXuv6JQ==,iv:lj8hjQUyxSVWPteGlWQQHOpGfikD/G8/a49bkfVdFaI=,tag:2sQ+Pa4ug9uoCTlUYITVqA==,type:str]
-    CHROME_TOKEN: ENC[AES256_GCM,data:jXgKfpIuLD7iXLiggGrcd+NKSf0KzxyDDc+JJcgau1japxHT4KYqAj9Id748haAwI6GmlVWxq8CBxKoOeiFkkQ==,iv:8e9YlpnkwiC/tJM6YXUzwn76hNrzopZfBnEQWtkn3TY=,tag:fGw0RQKJmsw4CMQ/XN6jiQ==,type:str]
+    #ENC[AES256_GCM,data:a3K4Qtm654yHStaAb+qLqv2K0E1Q22qc7xdFFooeC/JT1VT45ojS74vdyBLKMsY2bpiHNHNRG+UvcE4VhjOR9A==,iv:8eBETMPG660HQsMyAK0Ke2J2ngBLYE/M8l4Y0MFJXV8=,tag:Z7Ncz94hruOZrME+oyASlQ==,type:comment]
+    TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
+    #ENC[AES256_GCM,data:mVH8jssmaRw94bmxR27i60oHRdG47wDeZzcddcoIS3ie2623duEy/ry8FdmdKktj3uhmk1gglHh6J5D2/oA5sn4=,iv:45+TnUJIYokzlS/jZ5epU9HqMS2EvLc1K9RyRNh2KX4=,tag:ORVX8y6XEEDzbfgeN2PYiQ==,type:comment]
+    CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
     PUBLIC_URL: ENC[AES256_GCM,data:S11iy2a2/jLHFyXB4RusrEu4FrFXGVo4+HxVkg==,iv:CFEGEIPw/0uvdod5l3gNz2/p0Sk+mbHhIDafZjwgnc0=,tag:DsXsH4JXN6YPttY1HAGrjA==,type:str]
     STORAGE_URL: ENC[AES256_GCM,data:mHF3Ptf4pXLIyIYD/RRTZQB+bbutygxO1Y9lB3HBxHzLB/UiFw==,iv:SntPfbEIoCSf9PdxvquYIFmdholVOYVYV2ZVZtx7MLM=,tag:7MTzTmAq4ovgb81n2+QJUQ==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
@@ -37,8 +39,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T18:30:54Z"
-    mac: ENC[AES256_GCM,data:QyEJAzsH8YF0/unPS7LKK7P679RwajcLgmjzbNAKsLO6msLxCFwEtTMOosOQb5O0tzdrcNGvkemVhIrSLQ8edrG7En8zh1UizVx6+NGMpzXrXk65k2TyK19MDJsELT5WtODk9iedf1UG1qIWpiZxWw+z7gncHXb4dqfZzuB396Y=,iv:QaxxgIq8ODwVvRhluVWvoG89kbI/9NdKknfZgEWOraA=,tag:5bzDmud68AX68QNWUI5RzQ==,type:str]
+    lastmodified: "2025-01-28T18:38:26Z"
+    mac: ENC[AES256_GCM,data:wdlnN4U/z4rsT73w4SZR7rxn9UxCXTvXfBCGosGqKXykFMt1o9UWoUexNCw6BjhizB4GeNfoR3FpKAZeLB1581MxkZCeMDB3BWvlURuvHpBJFsr7qBrlm7BO4BA5wlg/ZrwUbBOiVsTx8dHtcfv4W3V/rlqflispS0Fioq1yzes=,iv:J1rZlgy8GUYpCay0iPaLzX/PquIr1y/SjyiUBoHsJ/g=,tag:ihCL4Tjv6SHqvkf/DdsoPg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
