--- a/argocd/apps/resume/manifests/service.yaml
+++ b/argocd/apps/resume/manifests/service.yaml
@@ -53,3 +53,17 @@ spec:
       targetPort: 9000
   selector:
     app: minio
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: chrome
+  name: chrome
+spec:
+  ports:
+    - name: http
+      port: 3000
+      targetPort: 3000
+  selector:
+    app: chrome
