--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -38,6 +38,10 @@ spec:
           image: minio/minio:latest
           imagePullPolicy: Always
           name: minio
+          command:
+            - minio
+            - server
+            - /data
           volumeMounts:
             - name: minio
               mountPath: /data
