--- a/argocd/apps/resume/manifests/ingress.yaml
+++ b/argocd/apps/resume/manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: resume.k8s.yanello.net
+    - host: resume.yanello.net
       http:
         paths:
           - backend:
@@ -23,7 +23,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: minio.k8s.yanello.net
+    - host: minio.yanello.net
       http:
         paths:
           - backend:
