--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -13,7 +13,8 @@ stringData:
     #ENC[AES256_GCM,data:mVH8jssmaRw94bmxR27i60oHRdG47wDeZzcddcoIS3ie2623duEy/ry8FdmdKktj3uhmk1gglHh6J5D2/oA5sn4=,iv:45+TnUJIYokzlS/jZ5epU9HqMS2EvLc1K9RyRNh2KX4=,tag:ORVX8y6XEEDzbfgeN2PYiQ==,type:comment]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
     PUBLIC_URL: ENC[AES256_GCM,data:S11iy2a2/jLHFyXB4RusrEu4FrFXGVo4+HxVkg==,iv:CFEGEIPw/0uvdod5l3gNz2/p0Sk+mbHhIDafZjwgnc0=,tag:DsXsH4JXN6YPttY1HAGrjA==,type:str]
-    STORAGE_URL: ENC[AES256_GCM,data:SC9xeEonr6YM9o45HmWPOIS+W6flWRZ1sVyTLUkGaA+2,iv:IILi+Q5sj7SkNb0MSf6hdW6XGXxowK5TTzJvskvDXZk=,tag:uM/k5ANTYtd2QeEfVUz7bg==,type:str]
+    #ENC[AES256_GCM,data:VvEpRVaf01I7SJsD57K2CG3DOpbJe06JP24LgkCN6RnS,iv:w2OkNv//ltY2jWIMsL2jbmSsRea9ISrzuwAixbt0EP0=,tag:qQavldfGcJ0lZ7qiu6V2+w==,type:comment]
+    STORAGE_URL: ENC[AES256_GCM,data:2ZmxF5pkHI80D30BVC4uaoip,iv:Igg1e42Dsd5kJEzJ4YHkfg1weaLqtCNEhAdnMAgCubQ=,tag:UujIrFcX2xD3VbnLR0uKOg==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     #ENC[AES256_GCM,data:jPwLluTgGc352OmWzo15VrJ9AThNEa+MbQ9X+ktYrBY35rf6mxVVg0UCg29NBenwmKwquL89t+RZpoE6elxVPw==,iv:2LlR4M97N9vLLJaNexvMPuHx9p8zb65AoJeL1OnEFF4=,tag:0ICj3V+Tu5U68276tZgtiw==,type:comment]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
@@ -39,8 +40,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T19:21:05Z"
-    mac: ENC[AES256_GCM,data:WqO8glR5eDNgcfsMx6tzoogMtwfDB8hb7g6GQZY7TEbyb/1M4B0STm/WN160BZtKLMByhtEu/C4fQUpQx/vAXZbxzxoczuXS9fA3n/4iMClaUzlHy2UgxfKZmUIIY285d8XgfngGDkz4CrObya5NKsYDN3jshoL/4Pq1I6KFBq4=,iv:LF9nizoSVUnehLVitybDfruobSsO0vrXsZu0T11SfdY=,tag:Gv5M2p9rkLOBVzem5RBF4g==,type:str]
+    lastmodified: "2025-01-28T20:37:20Z"
+    mac: ENC[AES256_GCM,data:1+iPMYiVwZtPgak8sAIOBWDFyhrWWhhAd83hrVS3/fX1dyPiz6WE545hL4MsbGdmtX/ecUFSHkBTcdwQNp9HMtr1PYJjZ5ZhhAG0sM6emGT6/A0kn2C/WsmSRit01PnvcE8B6rtbG9T7SgJua8p9RnVxrkUlK3d+48j/rG2LtYU=,iv:AyIHVo7CJv8kt+qlCQWx2mllKFjgOgQm0xfF4ECqJ9M=,tag:3Y/YNDMRmPvKUc9ipkqQLA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
