--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -12,7 +12,8 @@ stringData:
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
     #ENC[AES256_GCM,data:mVH8jssmaRw94bmxR27i60oHRdG47wDeZzcddcoIS3ie2623duEy/ry8FdmdKktj3uhmk1gglHh6J5D2/oA5sn4=,iv:45+TnUJIYokzlS/jZ5epU9HqMS2EvLc1K9RyRNh2KX4=,tag:ORVX8y6XEEDzbfgeN2PYiQ==,type:comment]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
-    PUBLIC_URL: ENC[AES256_GCM,data:S11iy2a2/jLHFyXB4RusrEu4FrFXGVo4+HxVkg==,iv:CFEGEIPw/0uvdod5l3gNz2/p0Sk+mbHhIDafZjwgnc0=,tag:DsXsH4JXN6YPttY1HAGrjA==,type:str]
+    #ENC[AES256_GCM,data:uWubgShRasvRcnrK8Omv9IQ/0UQz1bHaAhlGyA==,iv:QKzvzXzZXZIw1M54SaKlbpqU2s66JAjzcUerZN0meWY=,tag:ZTUUldj+nnyvPOhHCsxzzw==,type:comment]
+    PUBLIC_URL: ENC[AES256_GCM,data:52WwO8vQmMj87Xg=,iv:GeuuXBnqdlYp9VC2Axu0pnL0CKxDOMyTkWqm9NibJdo=,tag:X/+u0hXwmmVRIjZGSwMMgg==,type:str]
     #ENC[AES256_GCM,data:VvEpRVaf01I7SJsD57K2CG3DOpbJe06JP24LgkCN6RnS,iv:w2OkNv//ltY2jWIMsL2jbmSsRea9ISrzuwAixbt0EP0=,tag:qQavldfGcJ0lZ7qiu6V2+w==,type:comment]
     STORAGE_URL: ENC[AES256_GCM,data:2ZmxF5pkHI80D30BVC4uaoip,iv:Igg1e42Dsd5kJEzJ4YHkfg1weaLqtCNEhAdnMAgCubQ=,tag:UujIrFcX2xD3VbnLR0uKOg==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
@@ -40,8 +41,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T20:37:20Z"
-    mac: ENC[AES256_GCM,data:1+iPMYiVwZtPgak8sAIOBWDFyhrWWhhAd83hrVS3/fX1dyPiz6WE545hL4MsbGdmtX/ecUFSHkBTcdwQNp9HMtr1PYJjZ5ZhhAG0sM6emGT6/A0kn2C/WsmSRit01PnvcE8B6rtbG9T7SgJua8p9RnVxrkUlK3d+48j/rG2LtYU=,iv:AyIHVo7CJv8kt+qlCQWx2mllKFjgOgQm0xfF4ECqJ9M=,tag:3Y/YNDMRmPvKUc9ipkqQLA==,type:str]
+    lastmodified: "2025-01-28T20:40:12Z"
+    mac: ENC[AES256_GCM,data:ZdEgHeRu5NEk5oEZNJI0qcG7J8KuJ+oKCROZAVg6ceoGhDOYJoliU1uUFAd7vNcGvxU4kooOgj8xSF5TrhOP4YCqDZ3C/czvGU/LkM+AD72SJ3kgc1xP+tVr6XdgXzgWvRQ49k3eixEta3VelN2KjH6O9ngQeFVe0zeJkq0ENa8=,iv:jafjPgh5ZkZRfugu43xr90668b7z9x+ERmvfHkeQuK0=,tag:YNOqaZEv5agLvsy9GPwwxw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
