--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -12,10 +12,9 @@ stringData:
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
     #ENC[AES256_GCM,data:mVH8jssmaRw94bmxR27i60oHRdG47wDeZzcddcoIS3ie2623duEy/ry8FdmdKktj3uhmk1gglHh6J5D2/oA5sn4=,iv:45+TnUJIYokzlS/jZ5epU9HqMS2EvLc1K9RyRNh2KX4=,tag:ORVX8y6XEEDzbfgeN2PYiQ==,type:comment]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
-    #ENC[AES256_GCM,data:uWubgShRasvRcnrK8Omv9IQ/0UQz1bHaAhlGyA==,iv:QKzvzXzZXZIw1M54SaKlbpqU2s66JAjzcUerZN0meWY=,tag:ZTUUldj+nnyvPOhHCsxzzw==,type:comment]
-    PUBLIC_URL: ENC[AES256_GCM,data:52WwO8vQmMj87Xg=,iv:GeuuXBnqdlYp9VC2Axu0pnL0CKxDOMyTkWqm9NibJdo=,tag:X/+u0hXwmmVRIjZGSwMMgg==,type:str]
-    #ENC[AES256_GCM,data:VvEpRVaf01I7SJsD57K2CG3DOpbJe06JP24LgkCN6RnS,iv:w2OkNv//ltY2jWIMsL2jbmSsRea9ISrzuwAixbt0EP0=,tag:qQavldfGcJ0lZ7qiu6V2+w==,type:comment]
-    STORAGE_URL: ENC[AES256_GCM,data:2ZmxF5pkHI80D30BVC4uaoip,iv:Igg1e42Dsd5kJEzJ4YHkfg1weaLqtCNEhAdnMAgCubQ=,tag:UujIrFcX2xD3VbnLR0uKOg==,type:str]
+    PUBLIC_URL: ENC[AES256_GCM,data:fpPkPcbdjVSbSjCyRuEoQwDorj7U86284/0E6A==,iv:4KFiVsmbrtUcdPmoLYpRS7KyPqvo+NGh1/oVHWA8ZBs=,tag:CpwjsbXTMsTVSN6qTy8Xbw==,type:str]
+    STORAGE_URL: ENC[AES256_GCM,data:48FbRU1810BhT7SrS0YxEhShjNcoLmcq4+yB/mnzNr3m,iv:Wr4pQJ/G0DzbrovaHoIXEFkjhA8XutX4EL04QrE6nzA=,tag:VF3UHhC2ruSnlA/jl0KO5A==,type:str]
+    #ENC[AES256_GCM,data:b2ZYVq0KDnYrg5+BCUjHS2Mrc9Oyr42QwdnvZhzXhA==,iv:1TEpCltb4YSh0snUWvxvoeWjrlLvTI3yNJqGW1mXATY=,tag:JjPV7ePKU5BCoiDsiyFlSA==,type:comment]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     #ENC[AES256_GCM,data:jPwLluTgGc352OmWzo15VrJ9AThNEa+MbQ9X+ktYrBY35rf6mxVVg0UCg29NBenwmKwquL89t+RZpoE6elxVPw==,iv:2LlR4M97N9vLLJaNexvMPuHx9p8zb65AoJeL1OnEFF4=,tag:0ICj3V+Tu5U68276tZgtiw==,type:comment]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
@@ -41,8 +40,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T20:40:12Z"
-    mac: ENC[AES256_GCM,data:ZdEgHeRu5NEk5oEZNJI0qcG7J8KuJ+oKCROZAVg6ceoGhDOYJoliU1uUFAd7vNcGvxU4kooOgj8xSF5TrhOP4YCqDZ3C/czvGU/LkM+AD72SJ3kgc1xP+tVr6XdgXzgWvRQ49k3eixEta3VelN2KjH6O9ngQeFVe0zeJkq0ENa8=,iv:jafjPgh5ZkZRfugu43xr90668b7z9x+ERmvfHkeQuK0=,tag:YNOqaZEv5agLvsy9GPwwxw==,type:str]
+    lastmodified: "2025-01-28T20:48:44Z"
+    mac: ENC[AES256_GCM,data:uMoKBoyA8df+sYy9qWNjGhovP7H+nwPgJdFwl7UcQFpiorNJ3JWf49qNXONrD7vtsZD4LYYI1XcwR6hdEMiRF5hN6NuRrRrTLqolB/FT6bcCd92JOCAyZCn/hN2kwLWQTNGwDz2vhPJYskgune5v9I8F0rBOcG2ltBl7Jm1dDN0=,iv:XW43H/ys6z1ggW5FYwjDAzCrUtfXm7Q0+R4CoAbBiTw=,tag:u4ilpEYGG28UBN7M8VI05Q==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
