--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -172,6 +172,10 @@ spec:
       labels:
         app: chrome
     spec:
+      hostAliases:
+        - ip: resume
+          hostnames:
+            - resume.yanello.net
       containers:
         - image: ghcr.io/browserless/chromium:latest
           imagePullPolicy: Always
