--- a/argocd/apps/resume/manifests/ingress.yaml
+++ b/argocd/apps/resume/manifests/ingress.yaml
@@ -20,6 +20,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: minio
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+    nginx.ingress.kubernetes.io/websocket-services: "chrome"
 spec:
   ingressClassName: nginx
   rules:
