--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -76,6 +76,7 @@ spec:
         - image: docker.io/redis:6.2-alpine
           imagePullPolicy: IfNotPresent
           name: redis
+          command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
           ports:
             - containerPort: 6379
               protocol: TCP
