--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -4,27 +4,19 @@ metadata:
     name: resume-secrets
 type: Opaque
 stringData:
-    #ENC[AES256_GCM,data:NLtwDuN2f1gKPhMVK7Y+YBwlMgdzE99PlJOaI9xZVFosYaNirAr9ceNtDsYuaKlWYgsvcc4xMM7CS6wc0LqrxQ==,iv:nOkOTwcOuGxOJRmoDcUrtB1clpcwhF6L0qotCG6t3cI=,tag:QpAxq+hchID5p/PUV7aLkQ==,type:comment]
     DB_PASSWORD: ENC[AES256_GCM,data:Ng4ch3oY9Ng=,iv:nhNpN1rQiVGtsX3q4wce3+EdQGEm3CSHJiNOt6Csgtw=,tag:ChWbbFSwy69DB2urbjZIYA==,type:str]
-    #ENC[AES256_GCM,data:eSUaMTN1ITMmmCVf19sZCxjgyHHWB6RD4Ltwn+z83Z1frNtOCCm4UXN0gkjYW/P94EMWQeT+9Vp1ac8CrxljiA==,iv:S1v0D3PSv4kGzrzlbQO2LAt8qVGJMQu9P5AO5gBHFjM=,tag:CPete9RQJgElxCNlOqvhpg==,type:comment]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:fsoAThraUi1IgQ==,iv:a3q6Et5ewCKl4ix3pdYznAKcNLaw+KFAHMFY2+RGHCo=,tag:vtLOJRWjkhzPNUrLQyW8qQ==,type:str]
-    #ENC[AES256_GCM,data:a3K4Qtm654yHStaAb+qLqv2K0E1Q22qc7xdFFooeC/JT1VT45ojS74vdyBLKMsY2bpiHNHNRG+UvcE4VhjOR9A==,iv:8eBETMPG660HQsMyAK0Ke2J2ngBLYE/M8l4Y0MFJXV8=,tag:Z7Ncz94hruOZrME+oyASlQ==,type:comment]
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
-    #ENC[AES256_GCM,data:mVH8jssmaRw94bmxR27i60oHRdG47wDeZzcddcoIS3ie2623duEy/ry8FdmdKktj3uhmk1gglHh6J5D2/oA5sn4=,iv:45+TnUJIYokzlS/jZ5epU9HqMS2EvLc1K9RyRNh2KX4=,tag:ORVX8y6XEEDzbfgeN2PYiQ==,type:comment]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
     PUBLIC_URL: ENC[AES256_GCM,data:fpPkPcbdjVSbSjCyRuEoQwDorj7U86284/0E6A==,iv:4KFiVsmbrtUcdPmoLYpRS7KyPqvo+NGh1/oVHWA8ZBs=,tag:CpwjsbXTMsTVSN6qTy8Xbw==,type:str]
     STORAGE_URL: ENC[AES256_GCM,data:48FbRU1810BhT7SrS0YxEhShjNcoLmcq4+yB/mnzNr3m,iv:Wr4pQJ/G0DzbrovaHoIXEFkjhA8XutX4EL04QrE6nzA=,tag:VF3UHhC2ruSnlA/jl0KO5A==,type:str]
-    #ENC[AES256_GCM,data:b2ZYVq0KDnYrg5+BCUjHS2Mrc9Oyr42QwdnvZhzXhA==,iv:1TEpCltb4YSh0snUWvxvoeWjrlLvTI3yNJqGW1mXATY=,tag:JjPV7ePKU5BCoiDsiyFlSA==,type:comment]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
-    #ENC[AES256_GCM,data:jPwLluTgGc352OmWzo15VrJ9AThNEa+MbQ9X+ktYrBY35rf6mxVVg0UCg29NBenwmKwquL89t+RZpoE6elxVPw==,iv:2LlR4M97N9vLLJaNexvMPuHx9p8zb65AoJeL1OnEFF4=,tag:0ICj3V+Tu5U68276tZgtiw==,type:comment]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
-    #ENC[AES256_GCM,data:KAh0vigUa1+7rcHJSwflqX4Wl/Ff39E5XoTZjgw/J/V+bYQ6PU+/o/L/nzp4AeTMEvw1ebMI6zsKfsDYSs8ujg==,iv:4OnYPWnVZmuj7FbXv7+5ZQcyD5WrANOaCX2IrxMirV0=,tag:Zq4yl/06xRz2+eSHwalk7g==,type:comment]
     REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
-    #ENC[AES256_GCM,data:jP+dHpBtiixL5XJBiuKW9Z92VTSYUvH1vg2fzckBvrEYRG0astBVp2gWgqf5LF/MhC7cXtxrVVmtwuR/R8mt0g==,iv:o1YCwujRbawc8eCZson5c5u3cz42HL8xVz3T8iBkcv0=,tag:/P7A1XTi5RCU16EqJmDgHg==,type:comment]
     STORAGE_ACCESS_KEY: ENC[AES256_GCM,data:PJ9gro+UX0O5Dw==,iv:Vgjizp5bWtn8NwpixceJA6qKHbcTPGX6/rtEr2lCQfw=,tag:LMcAJXkAkg5GIoI7jjAdaQ==,type:str]
-    #ENC[AES256_GCM,data:5xy+TLQAush9U3Srb91U7DNCgf26UQiivbZqrjZJ7daIQyC1RpPNVPKbfhdPGhNCayx09O8UQVy4Ts4f+WoJ5g==,iv:PUe3iYAlVxUFrWYJ5Qi92aoxevBzefAD6oa7/57GEJY=,tag:QcdM5PJwHM8XlxFl/DjpVg==,type:comment]
     STORAGE_SECRET_KEY: ENC[AES256_GCM,data:xSXbIpp763Q8nw==,iv:Smqq+ABrUqzr84s+IE7nihOk1BDLrgqXYF/ZyX6/dK0=,tag:G0rTjkERtVuUp82OWM+e0A==,type:str]
-    REDIS_URL: ENC[AES256_GCM,data:51/hWBs84IYbMULXM+GLjYAJ,iv:rGCFqYOXmTWJ+AfLeFmbqauqXXzm+7YB4V6KtmAypho=,tag:86bDW2T1F2DcYxUOQvWVRw==,type:str]
+    REDIS_URL: ENC[AES256_GCM,data:UB+vzCrH/X31tI3KqCLHSH8LndCJmyziS4UrwodOLXL/G4p6kn/yKGU+pcfXhEELx8Ab+tj0m7fgxMGZ6wcWVtdrerZlZU4pUzCW1bZ0myjkH11/hectZd8=,iv:/u8GTjI89LBQUWT4AlsDHH2C8o3yurQ0rPbajEDSQew=,tag:vxVnkcMqQVzCzWmn9iQArw==,type:str]
+    REDIS_PASSWORD: ENC[AES256_GCM,data:kJvcj7CvWix7bXEI2MxdCqFVu9fFuFax+D2UrK0GEYijriwVYIbLjjhYeOi0ygEJ7fEirgrJamHKlvvcPXE=,iv:gDqnR0Kp+odWttC11wQ5PMjkal3jidksGs8RMoAqnlM=,tag:iuZ86CDRrrl9/xLscAM4oQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -40,8 +32,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T20:48:44Z"
-    mac: ENC[AES256_GCM,data:uMoKBoyA8df+sYy9qWNjGhovP7H+nwPgJdFwl7UcQFpiorNJ3JWf49qNXONrD7vtsZD4LYYI1XcwR6hdEMiRF5hN6NuRrRrTLqolB/FT6bcCd92JOCAyZCn/hN2kwLWQTNGwDz2vhPJYskgune5v9I8F0rBOcG2ltBl7Jm1dDN0=,iv:XW43H/ys6z1ggW5FYwjDAzCrUtfXm7Q0+R4CoAbBiTw=,tag:u4ilpEYGG28UBN7M8VI05Q==,type:str]
+    lastmodified: "2025-01-28T21:28:57Z"
+    mac: ENC[AES256_GCM,data:wqA28CQ/Vqa58sHkYCvpKwCJSXtLPIxLMk8xMf8UoZTRVz+0gho7H+ZVYlNtkltb88HxS/75MudON2p59dcB36eHGi98g5MJ7myRaw1q4lba9udps9BZb1TU9GgiRXnWwfNqMT4+9/Z2yek9SCTCDry8477vp+Jc9mZJYj0n12I=,iv:DVkivIFYT2iLY10q9uZ9TwXEuSN3HpKiHdW00NJ6+x4=,tag:7bJHR0v2dy1eE2741eX4wQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
