--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -239,7 +239,7 @@ spec:
             - name: NODE_ENV
               value: production
             - name: STORAGE_ENDPOINT
-              value: minio
+              value: minio.resume.svc.cluster.local
             - name: STORAGE_PORT
               value: "9000"
             - name: STORAGE_BUCKET
