--- a/argocd/apps/resume/manifests/service.yaml
+++ b/argocd/apps/resume/manifests/service.yaml
@@ -49,7 +49,7 @@ metadata:
   name: minio
 spec:
   ports:
-    - name: http
+    - name: api
       port: 9000
       targetPort: 9000
   selector:
