test local urls

--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -8,8 +8,10 @@ stringData:
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:fsoAThraUi1IgQ==,iv:a3q6Et5ewCKl4ix3pdYznAKcNLaw+KFAHMFY2+RGHCo=,tag:vtLOJRWjkhzPNUrLQyW8qQ==,type:str]
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
-    PUBLIC_URL: ENC[AES256_GCM,data:fpPkPcbdjVSbSjCyRuEoQwDorj7U86284/0E6A==,iv:4KFiVsmbrtUcdPmoLYpRS7KyPqvo+NGh1/oVHWA8ZBs=,tag:CpwjsbXTMsTVSN6qTy8Xbw==,type:str]
-    STORAGE_URL: ENC[AES256_GCM,data:48FbRU1810BhT7SrS0YxEhShjNcoLmcq4+yB/mnzNr3m,iv:Wr4pQJ/G0DzbrovaHoIXEFkjhA8XutX4EL04QrE6nzA=,tag:VF3UHhC2ruSnlA/jl0KO5A==,type:str]
+    #ENC[AES256_GCM,data:eZvPZEZqDP3yRPU8aPySC5GbgToibYtnjX711w==,iv:2IpPDtbeVQn+v3FQAkJd/vb8wiC0m2uN9TYr499gKjk=,tag:6LhnuqLUosEYMgl2DBAO4g==,type:comment]
+    PUBLIC_URL: ENC[AES256_GCM,data:+GKm17pE,iv:ffaf2FDbWfM+g30JxUyHLT9y6IA6t1udyvUj8RJiQvY=,tag:LXl4Jl5KozuCSj3zOONQuw==,type:str]
+    #ENC[AES256_GCM,data:LPKoXKTz8Rv8KAeYVZcdWrhPc3HSZSph4Sr39poAifsm,iv:GsUzYqG+bIIT/lUVe18dH55TNMnLPqKZThVq8auAHuU=,tag:UnCtQ1ORH0bDBI4XA0trvw==,type:comment]
+    STORAGE_URL: ENC[AES256_GCM,data:olOL3Lk=,iv:HI7LrUG7QI2j16tyAJ41sdOKVl8yFEc2WaSBxI92ZsQ=,tag:2wBr3F3TMaGGVH56LvVF+g==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
     REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
@@ -32,8 +34,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T21:28:57Z"
-    mac: ENC[AES256_GCM,data:wqA28CQ/Vqa58sHkYCvpKwCJSXtLPIxLMk8xMf8UoZTRVz+0gho7H+ZVYlNtkltb88HxS/75MudON2p59dcB36eHGi98g5MJ7myRaw1q4lba9udps9BZb1TU9GgiRXnWwfNqMT4+9/Z2yek9SCTCDry8477vp+Jc9mZJYj0n12I=,iv:DVkivIFYT2iLY10q9uZ9TwXEuSN3HpKiHdW00NJ6+x4=,tag:7bJHR0v2dy1eE2741eX4wQ==,type:str]
+    lastmodified: "2025-01-28T22:07:41Z"
+    mac: ENC[AES256_GCM,data:vtZ24nD5oz1sZ5JpLQH4ef4l4s7raheB2FStAxer8djnlq+PqyYxIc8BUj046SDhzqJcp5W8V0gXfWhvs8BsaQLJ+8so1K5GhFpO9XZ+JQx/bEQrtIAcJjkcv0RXy4tLX4iihyz25BWr624LoqiO+Wo688z2aikhEargUHavjwk=,iv:r0E6x/UUNYxIujsgk5CxbLG0RugSQe44txm1UcmnO8E=,tag:Yt+w+RMf+BsG+8PLULN0LA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
