--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -9,9 +9,9 @@ stringData:
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
     #ENC[AES256_GCM,data:eZvPZEZqDP3yRPU8aPySC5GbgToibYtnjX711w==,iv:2IpPDtbeVQn+v3FQAkJd/vb8wiC0m2uN9TYr499gKjk=,tag:6LhnuqLUosEYMgl2DBAO4g==,type:comment]
-    PUBLIC_URL: ENC[AES256_GCM,data:+GKm17pE,iv:ffaf2FDbWfM+g30JxUyHLT9y6IA6t1udyvUj8RJiQvY=,tag:LXl4Jl5KozuCSj3zOONQuw==,type:str]
+    PUBLIC_URL: ENC[AES256_GCM,data:9EQ9u97kgVBnzutp8Lsd0+izZ+map+KePHDzCbo=,iv:sNXIVjvKf83TbALcpG6DJC3tJzRlmK88C8UfPAuNPMo=,tag:PIa2H89o3XadOpqz0sUv6A==,type:str]
     #ENC[AES256_GCM,data:LPKoXKTz8Rv8KAeYVZcdWrhPc3HSZSph4Sr39poAifsm,iv:GsUzYqG+bIIT/lUVe18dH55TNMnLPqKZThVq8auAHuU=,tag:UnCtQ1ORH0bDBI4XA0trvw==,type:comment]
-    STORAGE_URL: ENC[AES256_GCM,data:olOL3Lk=,iv:HI7LrUG7QI2j16tyAJ41sdOKVl8yFEc2WaSBxI92ZsQ=,tag:2wBr3F3TMaGGVH56LvVF+g==,type:str]
+    STORAGE_URL: ENC[AES256_GCM,data:UuNSLfvAL/bflt6NAkGJUulN/70Vt5QgubgrWg==,iv:h3AIdvg/Hj+sLXElTfX/dQwrC28KksOnmFkMMtpkezQ=,tag:vElwVZmA/yPksfr79QVFEA==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
     REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
@@ -34,8 +34,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T22:07:41Z"
-    mac: ENC[AES256_GCM,data:vtZ24nD5oz1sZ5JpLQH4ef4l4s7raheB2FStAxer8djnlq+PqyYxIc8BUj046SDhzqJcp5W8V0gXfWhvs8BsaQLJ+8so1K5GhFpO9XZ+JQx/bEQrtIAcJjkcv0RXy4tLX4iihyz25BWr624LoqiO+Wo688z2aikhEargUHavjwk=,iv:r0E6x/UUNYxIujsgk5CxbLG0RugSQe44txm1UcmnO8E=,tag:Yt+w+RMf+BsG+8PLULN0LA==,type:str]
+    lastmodified: "2025-01-28T22:09:07Z"
+    mac: ENC[AES256_GCM,data:DrZbH+RLWObKzyPVsIUVjMry60RtPIv6ts/LZaNGhCiZtWLj2HGfGPpHXJluUrvqpeJMGfE9USQRt//UD7E0SvGfDp4BQ1GXSQj3KXaK+mKYXtlaxzx01f+8YqEcxLnIxfHcDI0mnl1/qL4IULrPyV2+NprWTZO+QiyniQZunBY=,iv:vgfxOrYaqaAyAMEtVSh4hUjtXUzot+jRTFB2OI5bbKM=,tag:xRZ0gRWTYd3YbPJr4YgY4A==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
