test local urls3

--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -11,7 +11,8 @@ stringData:
     #ENC[AES256_GCM,data:eZvPZEZqDP3yRPU8aPySC5GbgToibYtnjX711w==,iv:2IpPDtbeVQn+v3FQAkJd/vb8wiC0m2uN9TYr499gKjk=,tag:6LhnuqLUosEYMgl2DBAO4g==,type:comment]
     PUBLIC_URL: ENC[AES256_GCM,data:9EQ9u97kgVBnzutp8Lsd0+izZ+map+KePHDzCbo=,iv:sNXIVjvKf83TbALcpG6DJC3tJzRlmK88C8UfPAuNPMo=,tag:PIa2H89o3XadOpqz0sUv6A==,type:str]
     #ENC[AES256_GCM,data:LPKoXKTz8Rv8KAeYVZcdWrhPc3HSZSph4Sr39poAifsm,iv:GsUzYqG+bIIT/lUVe18dH55TNMnLPqKZThVq8auAHuU=,tag:UnCtQ1ORH0bDBI4XA0trvw==,type:comment]
-    STORAGE_URL: ENC[AES256_GCM,data:UuNSLfvAL/bflt6NAkGJUulN/70Vt5QgubgrWg==,iv:h3AIdvg/Hj+sLXElTfX/dQwrC28KksOnmFkMMtpkezQ=,tag:vElwVZmA/yPksfr79QVFEA==,type:str]
+    #ENC[AES256_GCM,data:QwXd+Tmm7oPSYUX5flLgc1SMltJqESdFJVsMa3+Al/BZT276,iv:t4vatbOynGVYq4+zVll0Di0EQU5ZD9GXigWr0n0ko/o=,tag:75efIC7LFbJQp5V9c2eSFg==,type:comment]
+    STORAGE_URL: ENC[AES256_GCM,data:a5Jyx+mJX+CuB0ss57ltZjZCXJRyuV16Nw7mXSaCvdXB,iv:YAmFT92rmAahhbHzPu5dXkqvWQNwXK3pkSKe8DId6Zo=,tag:xVg3TGoqosE07w82+Ne1+w==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
     REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
@@ -34,8 +35,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T22:09:07Z"
-    mac: ENC[AES256_GCM,data:DrZbH+RLWObKzyPVsIUVjMry60RtPIv6ts/LZaNGhCiZtWLj2HGfGPpHXJluUrvqpeJMGfE9USQRt//UD7E0SvGfDp4BQ1GXSQj3KXaK+mKYXtlaxzx01f+8YqEcxLnIxfHcDI0mnl1/qL4IULrPyV2+NprWTZO+QiyniQZunBY=,iv:vgfxOrYaqaAyAMEtVSh4hUjtXUzot+jRTFB2OI5bbKM=,tag:xRZ0gRWTYd3YbPJr4YgY4A==,type:str]
+    lastmodified: "2025-01-28T22:10:47Z"
+    mac: ENC[AES256_GCM,data:Mj5ajcCFbKerLqXnsMpy/w43D4wEjbRSqz7cXPVagnv+VWX3xN6zctvo0FKbByZrjZRaL/nsm/rKCxDsQ8awoq770XFpzAhksr9M7ahZ/iPqxRcFWS41eHDmURcNYTzW3gMHKTgaxcL/IBOVSRBde0Q0FdHTJeraiGJmBkoINpg=,iv:+NpywMlC/0anmOtoCLmrIjOZsZhJb0hw5Rl1zKnVB+U=,tag:Y+xGFCbuQSnVq4jGWLw0Lg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
