--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -9,7 +9,8 @@ stringData:
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
     #ENC[AES256_GCM,data:eZvPZEZqDP3yRPU8aPySC5GbgToibYtnjX711w==,iv:2IpPDtbeVQn+v3FQAkJd/vb8wiC0m2uN9TYr499gKjk=,tag:6LhnuqLUosEYMgl2DBAO4g==,type:comment]
-    PUBLIC_URL: ENC[AES256_GCM,data:9EQ9u97kgVBnzutp8Lsd0+izZ+map+KePHDzCbo=,iv:sNXIVjvKf83TbALcpG6DJC3tJzRlmK88C8UfPAuNPMo=,tag:PIa2H89o3XadOpqz0sUv6A==,type:str]
+    #ENC[AES256_GCM,data:54Kyl/QvJtfTj9Eq3gcNY90xI/TQgq5fubR50w4=,iv:zMELwFJuhfqdR7fj8IMD1aCfd/IHJbk89Je2vwtSdZc=,tag:pQS+qkDuturr+LPT0tVKdg==,type:comment]
+    PUBLIC_URL: ENC[AES256_GCM,data:0m19cEa5vAvQEktrRoC0DuZ3yWCKBrBxLDDtVw==,iv:ZRKR8GbRoPNlNsCfMRddb49sYRfARgFBJZjG0tbhvPI=,tag:va60iJ2NVhL9r6Lm472K0Q==,type:str]
     #ENC[AES256_GCM,data:LPKoXKTz8Rv8KAeYVZcdWrhPc3HSZSph4Sr39poAifsm,iv:GsUzYqG+bIIT/lUVe18dH55TNMnLPqKZThVq8auAHuU=,tag:UnCtQ1ORH0bDBI4XA0trvw==,type:comment]
     #ENC[AES256_GCM,data:QwXd+Tmm7oPSYUX5flLgc1SMltJqESdFJVsMa3+Al/BZT276,iv:t4vatbOynGVYq4+zVll0Di0EQU5ZD9GXigWr0n0ko/o=,tag:75efIC7LFbJQp5V9c2eSFg==,type:comment]
     STORAGE_URL: ENC[AES256_GCM,data:a5Jyx+mJX+CuB0ss57ltZjZCXJRyuV16Nw7mXSaCvdXB,iv:YAmFT92rmAahhbHzPu5dXkqvWQNwXK3pkSKe8DId6Zo=,tag:xVg3TGoqosE07w82+Ne1+w==,type:str]
@@ -35,8 +36,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T22:10:47Z"
-    mac: ENC[AES256_GCM,data:Mj5ajcCFbKerLqXnsMpy/w43D4wEjbRSqz7cXPVagnv+VWX3xN6zctvo0FKbByZrjZRaL/nsm/rKCxDsQ8awoq770XFpzAhksr9M7ahZ/iPqxRcFWS41eHDmURcNYTzW3gMHKTgaxcL/IBOVSRBde0Q0FdHTJeraiGJmBkoINpg=,iv:+NpywMlC/0anmOtoCLmrIjOZsZhJb0hw5Rl1zKnVB+U=,tag:Y+xGFCbuQSnVq4jGWLw0Lg==,type:str]
+    lastmodified: "2025-01-28T22:14:52Z"
+    mac: ENC[AES256_GCM,data:vilQ0Bjmf/wvtQOZSfIQDH+PSZwE6HaIsLhuiwZkYsblvXAtTVns9riNmzPSldcitfEF6xyIqH1Fbl4wYqrMf/hUMIj23w6x4jkvsxIl66WTF00EMcNcAXX90QEebpXzi7uAt4O3AmmW/UE7IR6IftbUzcg1LFlPWadM3Xe3+f4=,iv:kCy7QgWvZtCpEIfpxHtatQUX6RrEs3jKku2A78qJI90=,tag:2csaFE9sp+0yz1xAtuIWoA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
