test local urls5

--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -13,7 +13,8 @@ stringData:
     PUBLIC_URL: ENC[AES256_GCM,data:0m19cEa5vAvQEktrRoC0DuZ3yWCKBrBxLDDtVw==,iv:ZRKR8GbRoPNlNsCfMRddb49sYRfARgFBJZjG0tbhvPI=,tag:va60iJ2NVhL9r6Lm472K0Q==,type:str]
     #ENC[AES256_GCM,data:LPKoXKTz8Rv8KAeYVZcdWrhPc3HSZSph4Sr39poAifsm,iv:GsUzYqG+bIIT/lUVe18dH55TNMnLPqKZThVq8auAHuU=,tag:UnCtQ1ORH0bDBI4XA0trvw==,type:comment]
     #ENC[AES256_GCM,data:QwXd+Tmm7oPSYUX5flLgc1SMltJqESdFJVsMa3+Al/BZT276,iv:t4vatbOynGVYq4+zVll0Di0EQU5ZD9GXigWr0n0ko/o=,tag:75efIC7LFbJQp5V9c2eSFg==,type:comment]
-    STORAGE_URL: ENC[AES256_GCM,data:a5Jyx+mJX+CuB0ss57ltZjZCXJRyuV16Nw7mXSaCvdXB,iv:YAmFT92rmAahhbHzPu5dXkqvWQNwXK3pkSKe8DId6Zo=,tag:xVg3TGoqosE07w82+Ne1+w==,type:str]
+    #ENC[AES256_GCM,data:LPKoXKTz8Rv8KAeYVZcdWrhPc3HSZSph4Sr39poAifsm,iv:GsUzYqG+bIIT/lUVe18dH55TNMnLPqKZThVq8auAHuU=,tag:UnCtQ1ORH0bDBI4XA0trvw==,type:comment]
+    STORAGE_URL: ENC[AES256_GCM,data:MWaOnTmbTJBBnsmHNWKthTB+gE80PeV0vq348SU9Jo2sGyFw,iv:8WNNjW5yE41/D3tHAVak6ZNAV07kWkYvSLvKmi7qOco=,tag:wO3ThVMJ/pMz+Mt6dnOdmw==,type:str]
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
     REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
@@ -36,8 +37,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T22:14:52Z"
-    mac: ENC[AES256_GCM,data:vilQ0Bjmf/wvtQOZSfIQDH+PSZwE6HaIsLhuiwZkYsblvXAtTVns9riNmzPSldcitfEF6xyIqH1Fbl4wYqrMf/hUMIj23w6x4jkvsxIl66WTF00EMcNcAXX90QEebpXzi7uAt4O3AmmW/UE7IR6IftbUzcg1LFlPWadM3Xe3+f4=,iv:kCy7QgWvZtCpEIfpxHtatQUX6RrEs3jKku2A78qJI90=,tag:2csaFE9sp+0yz1xAtuIWoA==,type:str]
+    lastmodified: "2025-01-28T22:16:45Z"
+    mac: ENC[AES256_GCM,data:pqPiZ24F5q2BqD25f/I5RyXZjMrUwldKslUOnsmmXflGENTb/B5KokRtWRw2Kfv6EGaEssVw4aR3IPBALm9THvaU6XpCHRPr7s3BgRiNpMBO2H7NMQ2/ltJ7YkkN4zEnRL3S7YAeZnw9/VFJrbUG9PuqSMAwt/n0LaJhE92avSE=,iv:myXkQLWhbGrYTjMnclj5if8iCPKnkfN5sqojc6CfLLM=,tag:wc31D0QoFYKVCytI+M45mw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
