--- a/argocd/apps/resume/manifests/ingress.yaml
+++ b/argocd/apps/resume/manifests/ingress.yaml
@@ -2,14 +2,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: resume
-  annotations:
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
-    nginx.ingress.kubernetes.io/websocket-services: "chrome"
-    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
-    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/websocket-backend-protocol: "v1.protocol.websocket"
+  # annotations:
+  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
+  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
+  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
+  #   nginx.ingress.kubernetes.io/websocket-services: "chrome"
+  #   nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
+  #   nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+  #   nginx.ingress.kubernetes.io/websocket-backend-protocol: "v1.protocol.websocket"
 spec:
   ingressClassName: nginx
   rules:
@@ -28,11 +28,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: minio
-  annotations:
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
-    nginx.ingress.kubernetes.io/websocket-services: "chrome"
+  # annotations:
+  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+  #   nginx.ingress.kubernetes.io/websocket-services: "chrome"
 spec:
   ingressClassName: nginx
   rules:
