--- a/argocd/apps/resume/manifests/resume-secrets.enc.yaml
+++ b/argocd/apps/resume/manifests/resume-secrets.enc.yaml
@@ -6,6 +6,7 @@ type: Opaque
 stringData:
     DB_PASSWORD: ENC[AES256_GCM,data:Ng4ch3oY9Ng=,iv:nhNpN1rQiVGtsX3q4wce3+EdQGEm3CSHJiNOt6Csgtw=,tag:ChWbbFSwy69DB2urbjZIYA==,type:str]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:fsoAThraUi1IgQ==,iv:a3q6Et5ewCKl4ix3pdYznAKcNLaw+KFAHMFY2+RGHCo=,tag:vtLOJRWjkhzPNUrLQyW8qQ==,type:str]
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:5fgZl9lrahAIZQ==,iv:7hzd6TQXpw0UQRiWs5+Y3ZmV6ojGXbSbfAN1XhicUpI=,tag:pdwJlkWdmwhBnCSRdoba2w==,type:str]
     TOKEN: ENC[AES256_GCM,data:Pt9+tac2Al0CL1A7,iv:phRfL/pNl2rMpGT1Phf+ZqUPIowh+E8kRG1KgbqHrW4=,tag:gMRi6P/hEe8pJVrjk7z+hQ==,type:str]
     CHROME_TOKEN: ENC[AES256_GCM,data:GXFtfQPgVtDTnDM6,iv:x5nR7tn9ANo1JW5qZNoHw43nrmFVDvsysWmiczwSrAU=,tag:YT6sQifEInGhkvxLr0jsbg==,type:str]
     PUBLIC_URL: ENC[AES256_GCM,data:pJLiBvisscC2XKhaX1DfyMN/CXixXct1s5XR,iv:L+bKmkmuNvgSFPpMXqaY+X0kHY5ZIebElxUaC+oKpiY=,tag:Y+5pwiD9H9hDBJ7pwcjlBw==,type:str]
@@ -13,8 +14,6 @@ stringData:
     DATABASE_URL: ENC[AES256_GCM,data:K9/YJbPQaHW6ElV4jQII4uM6EMeYLLY3lzgNhLA0gL9JAgpMM4I4XXEOm9u+xTMD9fdcrUg=,iv:KPMdWY6iqlbWokNCtmu4b3qXxZ/WKjfswRxIXVq7WhU=,tag:BPcmCeYQtK7t+IvZGNAO8g==,type:str]
     ACCESS_TOKEN_SECRET: ENC[AES256_GCM,data:FNDUPp1CoWtBwTM6MgKIIfGy3Q==,iv:Hq9BhzrSDZb1ZGNcCxOoxFjwJ62NUVocIIMX54fdefc=,tag:Z6EUK8yW/fc43pRHPDlZPA==,type:str]
     REFRESH_TOKEN_SECRET: ENC[AES256_GCM,data:Jmi83/UsmZ6TSCBxKqUB20BM8GU=,iv:IFGNSp0qMC5a2VCRQqxGIP15TF7kj7i00/t03VkWd18=,tag:fd+puF8eaPvZ3sPNmHSpiw==,type:str]
-    STORAGE_ACCESS_KEY: ENC[AES256_GCM,data:PJ9gro+UX0O5Dw==,iv:Vgjizp5bWtn8NwpixceJA6qKHbcTPGX6/rtEr2lCQfw=,tag:LMcAJXkAkg5GIoI7jjAdaQ==,type:str]
-    STORAGE_SECRET_KEY: ENC[AES256_GCM,data:xSXbIpp763Q8nw==,iv:Smqq+ABrUqzr84s+IE7nihOk1BDLrgqXYF/ZyX6/dK0=,tag:G0rTjkERtVuUp82OWM+e0A==,type:str]
     REDIS_URL: ENC[AES256_GCM,data:UB+vzCrH/X31tI3KqCLHSH8LndCJmyziS4UrwodOLXL/G4p6kn/yKGU+pcfXhEELx8Ab+tj0m7fgxMGZ6wcWVtdrerZlZU4pUzCW1bZ0myjkH11/hectZd8=,iv:/u8GTjI89LBQUWT4AlsDHH2C8o3yurQ0rPbajEDSQew=,tag:vxVnkcMqQVzCzWmn9iQArw==,type:str]
     REDIS_PASSWORD: ENC[AES256_GCM,data:kJvcj7CvWix7bXEI2MxdCqFVu9fFuFax+D2UrK0GEYijriwVYIbLjjhYeOi0ygEJ7fEirgrJamHKlvvcPXE=,iv:gDqnR0Kp+odWttC11wQ5PMjkal3jidksGs8RMoAqnlM=,tag:iuZ86CDRrrl9/xLscAM4oQ==,type:str]
 sops:
@@ -32,8 +31,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-28T22:31:15Z"
-    mac: ENC[AES256_GCM,data:5iaW8Uynh1e1AZHgr5/+nI63TJlkTvH4ttR6iVS1pOq1yRXe3NokfV2ciMveFT12mcNk0iNlEVav811fxQyT+WNwe7q4b2MJ6zoTLaHx9nTbItwNSDhwqZjyzhE1Z55791oD//0YEcZZAExnMTNTwjYfOuwpWSTjWbzroEgWBf8=,iv:/cfjhhun1+wMs7H4RcUpG9VRx2i7i+7JKt2XFLwVTWw=,tag:sTZdpBs8PPo+ayvW1OB11w==,type:str]
+    lastmodified: "2025-01-28T22:43:23Z"
+    mac: ENC[AES256_GCM,data:X7qKg+jOsQETWQ8SN2LFxdG0tgPT8NMlSmWe3JUE3SDOpJ/oaad9pydjMOwcsFZaLeDxZ4o5fWTf4Y00WeKu6MI6EpPMrpT9849ElyXI16vBACTWv2XhrULbzlRCLSG0njsYVmtlSXrOQnqoJnBpmLw8whMMls5JYZY6nfxrwbE=,iv:KMVilqu91h6t+moOvw/w6ljLeKzGPS2JBz592F8Un5o=,tag:3fVN6cU02fEdGXzONcYULA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
