--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -1,85 +1,152 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: resume-config
-data:
-  DB_HOSTNAME: postgres
-  DB_DATABASE_NAME: postgres
-  DB_USERNAME: postgres
-  REDIS_HOSTNAME: "redis"
-  REDIS_PORT: "6379"
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: minio
-  labels:
-    app: minio
+  name: rx-resume
 spec:
   replicas: 1
-  revisionHistoryLimit: 3
-  selector:
-    matchLabels:
-      app: minio
   strategy:
     type: Recreate
+  selector:
+    matchLabels:
+      app: rx-resume
   template:
     metadata:
       labels:
-        app: minio
+        app: rx-resume
     spec:
       containers:
-        - env:
-            - name: MINIO_ROOT_USER
-              value: minioadmin
-          envFrom:
-            - secretRef:
-                name: resume-secrets
-          image: minio/minio:latest
-          imagePullPolicy: Always
-          name: minio
-          command:
-            - minio
-            - server
-            - /data
-          volumeMounts:
-            - name: minio
-              mountPath: /data
-          ports:
-            - containerPort: 9000
-              protocol: TCP
+      - name: rx-resume
+        image: amruthpillai/reactive-resume:v4.1.8
+        ports:
+        - containerPort: 3010
+        env:
+        - name: PORT
+          value: "3010"
+        - name: PUBLIC_URL
+          value: "https://rxresume.yanello.net"
+        - name: CHROME_TOKEN
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: CHROME_TOKEN
+        - name: CHROME_URL
+          value: "ws://localhost:3000"
+        - name: DATABASE_URL
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: DATABASE_URL
+        # - name: MAIL_FROM
+        #   value: "example@example.com"
+        # - name: SMTP_URL
+        #   value: "smtp://...:587"
+        - name: DISABLE_SIGNUPS
+          value: "false"
+        - name: DISABLE_EMAIL_AUTH
+          value: "false"
+        - name: STORAGE_ENDPOINT
+          value: "localhost"
+        - name: STORAGE_REGION
+          value: "us-east-1"
+        - name: STORAGE_BUCKET
+          value: "default"
+        - name: STORAGE_ACCESS_KEY
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: MINIO_ROOT_USER
+        - name: STORAGE_SECRET_KEY
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: MINIO_ROOT_PASSWORD
+        - name: STORAGE_USE_SSL
+          value: "false"
+        - name: SKIP_BUCKET_CHECK
+          value: "false"
+        - name: STORAGE_PORT
+          value: "9000"
+        - name: STORAGE_URL
+          value: "https://minio.yanello.net/default"
+        - name: ACCESS_TOKEN_SECRET
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: ACCESS_TOKEN_SECRET
+        - name: REFRESH_TOKEN_SECRET
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: REFRESH_TOKEN_SECRET
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 2048Mi
+          requests:
+            cpu: 1000m
+            memory: 2048Mi
+
+      - name: rx-chrome
+        image: ghcr.io/browserless/chromium:latest
+        ports:
+        - containerPort: 3000
+        env:
+        - name: TIMEOUT
+          value: "300000"
+        - name: CONCURRENT
+          value: "10"
+        - name: TOKEN
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: CHROME_TOKEN
+        - name: EXIT_ON_HEALTH_FAILURE
+          value: "false"
+        - name: PRE_REQUEST_HEALTH_CHECK
+          value: "false"
+        resources:
+          limits:
+            cpu: 2000m
+            memory: 4096Mi
+          requests:
+            cpu: 2000m
+            memory: 4096Mi
+
+      - name: rx-resume-s3
+        image: minio/minio:latest
+        args:
+        - server
+        - /data
+        env:
+        - name: MINIO_ROOT_USER
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: MINIO_ROOT_USER
+        - name: MINIO_ROOT_PASSWORD
+          valueFromSecret:
+            secretKeyRef:
+              name: resume-secrets
+              key: MINIO_ROOT_PASSWORD
+        ports:
+        - name: s3
+          containerPort: 9000
+        imagePullPolicy: Always
+        volumeMounts:
+        - mountPath: /data
+          name: assets-storage
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 2048Mi
+          requests:
+            cpu: 1000m
+            memory: 2048Mi
+
       volumes:
-        - name: minio
-          persistentVolumeClaim:
-            claimName: minio
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: redis
-  labels:
-    app: redis
-spec:
-  replicas: 1
-  revisionHistoryLimit: 3
-  selector:
-    matchLabels:
-      app: redis
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: redis
-    spec:
-      containers:
-        - image: docker.io/redis:6.2-alpine
-          imagePullPolicy: IfNotPresent
-          name: redis
-          command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
-          ports:
-            - containerPort: 6379
-              protocol: TCP
+      - name: assets-storage
+        persistentVolumeClaim:
+          claimName: minio
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -154,98 +221,3 @@ spec:
           persistentVolumeClaim:
             claimName: db
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: chrome
-  labels:
-    app: chrome
-spec:
-  replicas: 1
-  revisionHistoryLimit: 3
-  selector:
-    matchLabels:
-      app: chrome
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: chrome
-    spec:
-      hostAliases:
-        - ip: 10.43.208.237
-          hostnames:
-            - rxresume.yanello.net
-      containers:
-        - image: ghcr.io/browserless/chromium:latest
-          imagePullPolicy: Always
-          name: chrome
-          ports:
-            - containerPort: 3000
-              protocol: TCP
-          env:
-            - name: TIMEOUT
-              value: "120000"
-            - name: EXIT_ON_HEALTH_FAILURE
-              value: "true"
-            - name: KEEP_ALIVE
-              value: "true"
-            - name: PREBOOT_CHROME
-              value: "true"
-            - name: CHROME_REFRESH_TIME
-              value: "3600000"
-            - name: CONNECTION_TIMEOUT
-              value: "120000"
-            - name: PRE_REQUEST_HEALTH_CHECK
-              value: "true"
-          envFrom:
-            - secretRef:
-                name: resume-secrets
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: resume
-  labels:
-    app: resume
-spec:
-  replicas: 1
-  revisionHistoryLimit: 3
-  selector:
-    matchLabels:
-      app: resume
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: resume
-    spec:
-      containers:
-        - image: amruthpillai/reactive-resume:latest
-          imagePullPolicy: Always
-          name: resume
-          ports:
-            - containerPort: 3000
-              protocol: TCP
-          env:
-            - name: PORT
-              value: "3000"
-            - name: VITE_DISABLE_SIGNUPS
-              value: "true"
-            - name: CHROME_URL
-              value: ws://chrome:3000
-            - name: NODE_ENV
-              value: production
-            - name: STORAGE_ENDPOINT
-              value: minio
-            - name: STORAGE_PORT
-              value: "9000"
-            - name: STORAGE_BUCKET
-              value: default
-            - name: STORAGE_USE_SSL
-              value: "false"
-          envFrom:
-            - secretRef:
-                name: resume-secrets
