--- a/argocd/apps/resume/manifests/ingress.yaml
+++ b/argocd/apps/resume/manifests/ingress.yaml
@@ -1,48 +1,80 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: resume
+  name: rx-resume-ingress
   # annotations:
-  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
-  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
-  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
-  #   nginx.ingress.kubernetes.io/websocket-services: "chrome"
-  #   nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
-  #   nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-  #   nginx.ingress.kubernetes.io/websocket-backend-protocol: "v1.protocol.websocket"
+  #   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
+  #   nginx.ingress.kubernetes.io/auth-tls-secret: tools/cloudflare-tls-secret
+  #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
+  #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
 spec:
   ingressClassName: nginx
   rules:
     - host: rxresume.yanello.net
       http:
         paths:
-          - backend:
-              service:
-                name: resume
-                port:
-                  number: 3000
-            path: /
+          - path: /
             pathType: Prefix
+            backend:
+              service:
+                name: rx-resume
+                port:
+                  number: 3010
+  # tls:
+  #   - hosts:
+  #       - ...
+  #     secretName: cloudflare-origin-server
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minio
+  name: rx-minio-ingress
   # annotations:
-  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
-  #   nginx.ingress.kubernetes.io/websocket-services: "chrome"
+  #   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
+  #   nginx.ingress.kubernetes.io/auth-tls-secret: tools/cloudflare-tls-secret
+  #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
+  #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
 spec:
   ingressClassName: nginx
   rules:
     - host: minio.yanello.net
       http:
         paths:
-          - backend:
+          - path: /
+            pathType: Prefix
+            backend:
               service:
-                name: minio
+                name: rx-resume-s3
                 port:
                   number: 9000
-            path: /
+  # tls:
+  #   - hosts:
+  #       - ...
+  #     secretName: cloudflare-origin-server
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: rx-minio-dashboard-ingress
+  # annotations:
+  #   nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
+  #   nginx.ingress.kubernetes.io/auth-tls-secret: tools/cloudflare-tls-secret
+  #   nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
+  #   nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: minio-dash.yanello.net
+      http:
+        paths:
+          - path: /
             pathType: Prefix
+            backend:
+              service:
+                name: rx-resume-s3-dashboard
+                port:
+                  number: 44253
+  # tls:
+  #   - hosts:
+  #       - ...
+  #     secretName: cloudflare-origin-server
