--- a/argocd/apps/resume/manifests/service.yaml
+++ b/argocd/apps/resume/manifests/service.yaml
@@ -1,70 +1,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: resume
-  name: resume
+  name: rx-resume
+  namespace: tools
 spec:
-  clusterIP: 10.43.208.237
   ports:
-    - name: http
-      port: 3000
-      targetPort: 3000
+  - port: 3010
+    targetPort: 3010
   selector:
-    app: resume
+    app: rx-resume
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: redis
-  name: redis
+  name: rx-resume-s3
+  namespace: tools
 spec:
   ports:
-    - name: redis
-      port: 6379
-      targetPort: 6379
+  - port: 9000
+    targetPort: 9000
   selector:
-    app: redis
+    app: rx-resume
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: postgres
-  name: postgres
+  name: rx-resume-s3-dashboard
+  namespace: tools
 spec:
   ports:
-    - name: postgres
-      port: 5432
-      targetPort: 5432
+  - port: 44253
+    targetPort: 44253
   selector:
-    app: postgres
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: minio
-  name: minio
-spec:
-  ports:
-    - name: api
-      port: 9000
-      targetPort: 9000
-  selector:
-    app: minio
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: chrome
-  name: chrome
-spec:
-  ports:
-    - name: websocket
-      port: 3000
-      targetPort: 3000
-  selector:
-    app: chrome
+    app: rx-resume
