--- a/argocd/apps/calibre/manifests/service.yaml
+++ b/argocd/apps/calibre/manifests/service.yaml
@@ -34,7 +34,7 @@ metadata:
   name: cloudflareproxy
 spec:
   ports:
-    - name: "http"
+    - name: "api"
       port: 8000
       targetPort: 8000
   selector:
